# scDINO

./: .gitignore  conda-env-scdino.yml  pyproject.toml  uc-rc-env-setup-conda.sh  uc-rc-env-setup-pyenv-poetry.sh  uc-rc-env-setup-pyenv.sh  uc-rc-env-setup.sh
configs/: only_downstream_analyses.yaml
notebooks/: exploration-calc-mean-and-std.ipynb  exploration-calc-mean-and-std.py  exploration-data-prep.ipynb  exploration-data-prep.py  exploration-prep.ipynb
